Fix font sizes on mobile

--- a/frontend-org/app/src/components/Hero/styles.module.css
+++ b/frontend-org/app/src/components/Hero/styles.module.css
@@ -4,7 +4,7 @@
 
 .heroTitleBox {
   text-align: center;
-  padding: 24px 12px;
+  padding: 24px;
   max-width: calc(100% - 24px);
   z-index: 100;
 }
