--- a/frontend-org/app/src/components/PageBase/styles.module.css
+++ b/frontend-org/app/src/components/PageBase/styles.module.css
@@ -11,7 +11,7 @@
 
 .pageTitle {
   color: var(--mui-palette-secondary-main);
-  font-size: 42px !important;
+  text-wrap: balance;
 }
 
 .pageSubtitle {
