--- a/frontend-org/app/src/components/PageOrg/styles.module.css
+++ b/frontend-org/app/src/components/PageOrg/styles.module.css
@@ -7,12 +7,13 @@
 .pageTitle {
   text-align: center;
   color: var(--mui-palette-secondary-main);
-  font-size: 42px !important;
+  text-wrap: balance;
 }
 
 .pageSubtitle {
   padding-top: 16px;
   text-align: center;
+  text-wrap: balance;
 }
 
 .pageTitleBox {
