--- a/frontend-towers/app/src/components/PageBase/styles.module.css
+++ b/frontend-towers/app/src/components/PageBase/styles.module.css
@@ -7,7 +7,7 @@
 .pageTitle {
   text-align: center;
   color: #1d1d1d;
-  font-size: 42px !important;
+  text-wrap: balance;
 }
 
 .pageForm {
