--- a/frontend-towers/app/src/pages/home/styles.module.css
+++ b/frontend-towers/app/src/pages/home/styles.module.css
@@ -42,13 +42,14 @@
 
 .heroTitle {
   color: #1d1d1d;
-  font-size: 48px !important;
   margin: 24px 0 16px 0 !important;
 }
 
 .heroSubtitle {
   font-size: 16px !important;
   color: #1d1d1d;
+  text-wrap: balance;
+  line-height: 1.3 !important;
 }
 
 .heroButton {
@@ -84,7 +85,6 @@
 .joinTitle {
   text-align: center;
   color: #1d1d1d;
-  font-size: 42px !important;
 }
 
 .joinListTitle {
@@ -113,26 +113,22 @@
   display: flex;
   flex-basis: 0;
   align-items: center;
-  padding: 64px 0;
 }
 
 .rehearsalsTitle {
   text-align: center;
   color: #1d1d1d;
-  font-size: 42px !important;
 }
 
 .timeline {
   display: flex;
   flex-basis: 0;
   align-items: center;
-  padding: 64px 0;
 }
 
 .timelineTitle {
   text-align: center;
   color: #1d1d1d;
-  font-size: 42px !important;
 }
 
 .timelineGrid {
